--- a/apps/frontend/src/components/cards/ChefCard/ChefCard.module.scss
+++ b/apps/frontend/src/components/cards/ChefCard/ChefCard.module.scss
@@ -22,7 +22,7 @@
   justify-content: center;
   padding: 0.9rem 1rem;
 
-  @media (min-width: bp.$md) {
+  @media (min-width: bp.$lg) {
     padding: 1.25rem 1rem;
   }
 }
